# AetherContracts

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MIGRATION.md  README-CN.md  README.md  SECURITY.md  contract-manifest.json  llms.txt  package.json  pnpm-lock.yaml  tsconfig.json
.github/actions/verify-consumer/: action.yml
.github/workflows/: contracts.yml  release.yml
ai/: docs-manifest.json  docs-manifest.schema.json  invariants.md
cmake/: AetherContractsConfig.cmake.in
compatibility/: cloudlink-joint-core-provenance.json  cloudlink-v1alpha1-gates.json  failure-codes.json  integration-control-v1alpha1.json  integration-v1alpha1.json  product-matrix.json  thing-model-v1alpha1.json
docs/: compatibility.md  conformance.md  getting-started.md  integration.md
docs/migrations/: alpha3-to-alpha4.md
fixtures/cloudlink/v1alpha1/: fixture-manifest.json  oversized-payload.json  session-challenge-request-unknown-field.json  session-challenge-request.valid.json  session-hello.valid.json  unknown-field.json
scripts/: check-cmake-install.mjs  check-release-tag.mjs  check-typescript-pack.mjs  import-cloudlink-joint-core.mjs  update-agent-docs.mjs  update-hashes.mjs  verify-consumer-lock.mjs
spec/: cloudlink-v1alpha1.md  distribution-v1alpha1.md  foundation.md  integration-control-v1alpha1.md  integration-v1alpha1.md  tck-v1alpha1.md  thing-model-v1alpha1.md
tck/consumers/cmake/: CMakeLists.txt  main.cpp
tck/lib/: cloudlink-authentication-context.mjs  cloudlink-integration-context.mjs  integration-context.mjs  integration-control-context.mjs  scenario-runner.mjs
tck/scenarios/: core.json
tck/test/: agent-docs-manifest.test.mjs  cloudlink-authentication-contract.test.mjs  cloudlink-integration-contract.test.mjs  consumer-lock.test.mjs  contract-manifest.test.mjs  core-scenarios.test.mjs  fixture-integrity.test.mjs  fixture-manifest-exactness.test.mjs  integration-contract.test.mjs  integration-control-contract.test.mjs  portable-contract-gaps.test.mjs  release-version.test.mjs  safety-contract.test.mjs  schema-conformance.test.mjs  strict-json.test.mjs  strict-repository-json.test.mjs
(+35 files in other folders)
